fix upload toast overflow on mobile landscape

--- a/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/presentation/presentation-uploader/styles.scss
@@ -495,6 +495,6 @@
 }
 
 .toastWrapper {
-  max-height: 35vh;
+  max-height: 50%;
   width: var(--fileLineWidth);
 }
